--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/styled-components": "^4.1.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-draggable": "^4.1.0",
     "react-scripts": "3.0.1",
     "styled-components": "^4.2.0",
     "typescript": "3.4.5"
