--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "nibble95",
+  "name": "nibble4.1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.13",
-    "@types/node": "12.0.2",
-    "@types/react": "16.8.17",
-    "@types/react-dom": "16.8.4",
-    "@types/styled-components": "^4.1.15",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-draggable": "^4.1.0",
-    "react-scripts": "3.0.1",
-    "styled-components": "^4.2.0",
-    "typescript": "3.4.5"
+    "@types/jest": "26.0.13",
+    "@types/node": "14.6.4",
+    "@types/react": "16.9.49",
+    "@types/react-dom": "16.9.8",
+    "@types/styled-components": "^5.1.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
+    "react-scripts": "^3.4.3",
+    "styled-components": "^5.2.0",
+    "typescript": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --fix"
   },
   "browserslist": {
     "production": [
@@ -37,10 +35,13 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.1.0"
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "6.6.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0"
   }
 }
